--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                     <div class="name">Jimesh Vadodariya</div>
                     <div class="ce"> and I am a <span class="text"></span></div>
                 </div>
-                <div class="devpic"><img src="image/mypic.png" alt="jimesh"> </div>
+                <div class="devpic"><img src="mypic.png" alt="jimesh"> </div>
             </div>
         </div>
     </div>
@@ -177,10 +177,10 @@
         </div>
         <div class="card">
             <div class="c">
-                <a href="c1.jpg"><img src="image/c1.jpg" alt="c1"></a>
+                <a href="c1.jpg"><img src="c1.jpg" alt="c1"></a>
             </div>
             <div class="c">
-                <a href="c2.jpg"><img src="image/c2.jpg" alt="c2"></a>
+                <a href="c2.jpg"><img src="c2.jpg" alt="c2"></a>
             </div>
         </div>
     </div>
@@ -192,7 +192,7 @@
         
             <div class="project-container">
                 <div class="project-box">
-                    <img src="image/puzzle.png" alt="1">
+                    <img src="puzzle.png" alt="1">
                     <div class="project-layer">
                         <h4>Jigsaw Puzzle</h4><br>
                         <div class="A">
@@ -208,7 +208,7 @@
                 </div>
 
                 <div class="project-box">
-                    <img src="image/map.png" alt="1">
+                    <img src="map.png" alt="1">
                     <div class="project-layer">
                         <h4>Geolocation</h4><br>
                         <div class="A">
@@ -224,7 +224,7 @@
                 </div>
            
                 <div class="project-box">
-                    <img src="image/drop.png" alt="1">
+                    <img src="drop.png" alt="1">
                     <div class="project-layer">
                         <h4>Drag & Drop File Upload</h4><br>
                         <div class="A">
@@ -240,7 +240,7 @@
                 </div>
 
                 <div class="project-box">
-                    <img src="image/startup.jpg" alt="1">
+                    <img src="startup.jpg" alt="1">
                     <div class="project-layer">
                         <h4>Start-Up Ideas</h4><br>
                         <div class="A">
